@@ -9,8 +9,7 @@
 #include <string.h>
 #include <glib/gmacros.h>
 #include <gtk/gtk.h>
-#include <libgnomecanvas/gnome-canvas.h>
-#include <libgnomecanvas/gnome-canvas-rect-ellipse.h>
+#include <libgnomecanvas/libgnomecanvas.h>
 
 #ifdef WITH_BONOBO
 #include <bonobo/Bonobo.h>
